# cpp-basic-course

./: .gitignore  404.html  README.md  allposts.html  feed.xml  index.html  redirects.json  robots.txt  search.json  sitemap.xml
.circleci/: config.yml
about/: index.html
basics/: .gitignore  README.md
basics_of_plotting/: .gitignore  CMakeLists.txt  README.md  main.cc
basics_of_plotting/QCustomPlot/: CMakeLists.txt  QCustomPlot
birthday_problem/: README.md  main.cc
cmake_more_files/: .gitignore  CMakeLists.txt  README.md  function.cc  function.h  main.cc
cmake_subdirectory_and_library/: .gitignore  CMakeLists.txt  README.md  main.cc
command_line_arguments/: README.md  main.cc
css/: main.css
desk_calculator/: CMakeLists.txt  README.md  main.cc
docs/: .gitignore  _config.yml  allposts.html  index.html
effective_modern_cpp/: .gitignore  README.md  classes.cc  scoped_enums.cc
exceptions_and_assertions/: main.cc
exponential_function/: README.md  main.cc
factorial/: README.md  main.cc
fibonacci/: main.cc
gauss_sum/: README.md  main.cc
hello_world/: README.md  main.cc
lecture_and_exercises_source_code/: .gitignore  arg_int.cc  args.cc  bool_traits.cc  double_traits.cc  factorial.cc  file_io.cc  float_traits.cc  for.cc  function_exp.cc  function_sin.cc  function_square.cc  hello.cc  if_branch.cc  int_traits.cc  name_and_age.cc  number_io.cc  pi.cc  prime_numbers.cc  procedure.cc  rational.cc  scope.cc  vector.cc  while.cc  word_io.cc
lecture_and_exercises_source_code/game/: .gitignore  CMakeLists.txt  box.h  game.cc  game.h  main.cc  painter_utils.h  particle.h
lecture_and_exercises_source_code/n-body_simulation/: .gitignore  CMakeLists.txt  main.cc  viewer.h
macro_usage/: .gitignore  README.md  main.cc
password/: README.md  main.cc
prime_numbers/: .gitignore  README.md  main.cc
(+99 files in other folders)
